# modules-2023-demo

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
Modules2023/: CMakeLists.txt
Modules2023/core/: CMakeLists.txt  core.cpp  foo.cpp  foo.cxx  geometry.cpp  io.cpp
Modules2023/core_test/: CMakeLists.txt  core.cpp  foo.cpp
Modules2023/example/: CMakeLists.txt  main.cpp
